--- a/app/src/main/res/layout/item_photo.xml
+++ b/app/src/main/res/layout/item_photo.xml
@@ -2,6 +2,7 @@
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical"
+    android:background="@android:color/white"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
@@ -42,6 +43,8 @@
             android:layout_alignParentRight="true"
             android:padding="20dp"
             android:layout_alignParentEnd="true"
+            android:drawableLeft="@drawable/tiny_clock"
+            android:textColor="#B8B8B8"
             />
     </RelativeLayout>
 
