--- a/app/src/main/res/layout/item_photo.xml
+++ b/app/src/main/res/layout/item_photo.xml
@@ -30,7 +30,8 @@
             android:layout_toRightOf="@+id/ivUserProfilePicture"
             android:layout_toEndOf="@+id/ivUserProfilePicture"
             android:layout_centerVertical="true"
-            android:gravity="center_vertical" />
+            android:gravity="center_vertical"
+            android:textColor="#517fa4"/>
 
         <TextView
             android:layout_width="wrap_content"
