Add feature where users can click on "view all comments" and see all comments

--- a/app/src/main/res/layout/item_photo.xml
+++ b/app/src/main/res/layout/item_photo.xml
@@ -90,7 +90,8 @@
             android:textAppearance="?android:attr/textAppearanceMedium"
             android:text="view all comments"
             android:id="@+id/tvViewAllComments"
-            android:textColor="#B8B8B8"/>
+            android:textColor="#B8B8B8"
+            android:clickable="true" />
 
         <TextView
             android:layout_width="wrap_content"
